# Convert-Web-Page-To-App

./: README.md  download-icon.ps1  icon-generator.js  index.html  package-lock.json  package.json
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
